# studying-cl

./: .gitignore  LICENSE  Makefile  README.md  bootstrap.sh  pyproject.toml  run.sh
cl/: config.py  tasks.py
cl/evals/: finance_yr.py  finqa.py  gsm8k.py  hotpot_evaluate_v1.py  hotpotqa.py  hover.py  ifeval.py  livebench_math.py  medmcqa.py  parquet_io.py  sciknoweval.py  sciknoweval_bio.py  sciknoweval_sdpo.py  sdpo_tooluse.py  sealqa.py  sentiment10k.py  temporalwiki.py  toolalpaca.py  tooluse.py
cl/utils/: failure_tracker.py  metrics_logger.py  plotting.py  predictions_logger.py  token_tracker.py  wandb_logger.py
configs/methods/: ace-minimal.yaml  ace.yaml  gepa.yaml  openevolve.yaml  openevolve_system_message.txt  sdft.yaml  sdpo.yaml  ssd.yaml
configs/models/: gemini-flash-lite.yaml  gemini-flash.yaml  gpt-oss-20b-bedrock.yaml  qwen-3-32b-bedrock-gpt52-reflector.yaml  qwen-3-32b-bedrock.yaml  qwen-3-8b-alibaba.yaml  qwen-3-8b-portkey-gpt52-reflector.yaml  qwen-3-8b-portkey.yaml  qwen-3-8b-sagemaker.yaml  qwen-3-8b.yaml  qwen2.5-7b-instruct.yaml
configs/runs/: sequential.yaml
configs/tasks/: finqa.yaml  gsm8k.yaml  hotpotqa.yaml  hover.yaml  ifeval.yaml  livebench_math.yaml  math_algebra_l5.yaml  math_hard.yaml  math_l5.yaml  math_numtheory.yaml  medmcqa.yaml  sciknow_bio.yaml  sciknow_chem.yaml  sdpo_tool.yaml  (+7 more)
docs/: SETUP.md  TASKS.md
envs/: requirements-cartridges.txt  requirements-harness.txt  requirements-ttt.txt  requirements-verl.txt
experiments/: README.md
scripts/: download_data.sh  eval_prompt.py  launch_run.sh  run.py  verl_training.sh
(+151 files in other folders)
